--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,60 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
+
 body {
-  background: #111113;
+  background: #010103;
+  font-family: "Roboto mono", sans-serif;
+}
+
+.nav-ul {
+  @apply flex flex-col items-center gap-4 sm:flex-row md:gap-6 relative z-20;
+}
+
+.nav-li {
+  @apply text-white hover:text-blue-custom duration-500 font-medium;
+}
+
+.nav-sidebar {
+  @apply absolute left-0 right-0 top-[4.8rem] bg-black backdrop-blur-sm transition-all duration-300 ease-in-out overflow-hidden z-20 mx-auto sm:hidden block;
+}
+
+.hero-title {
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2.2px;
+  text-shadow: 1px 3px 11px rgba(0, 0, 0, 0.3);
+  font-size: 8vw;
+  font-family: sans-serif;
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
+}
+
+.hero-subtitle {
+  font-size: 22px;
+  text-transform: uppercase;
+  letter-spacing: 2.2px;
+  font-family: "Poppins", sans-serif;
+  color: #ffffff;
 }
 
 .backend-dev {
   text-decoration: underline;
   text-decoration-thickness: 3px;
-  text-decoration-color: #2C9D49;
-  text-underline-offset: 6px; 
+  text-decoration-color: #2c9d49;
+  text-underline-offset: 6px;
 }
 
 .frontend-dev {
   text-decoration: underline;
   text-decoration-thickness: 3px;
-  text-decoration-color: #2C49D8;
-  text-underline-offset: 6px; 
+  text-decoration-color: #2c49d8;
+  text-underline-offset: 6px;
 }
 
 .database-dev {
   text-decoration: underline;
   text-decoration-thickness: 3px;
-  text-decoration-color: #F5A623;
-  text-underline-offset: 6px; 
+  text-decoration-color: #f5a623;
+  text-underline-offset: 6px;
 }
 
 .experience-container {
@@ -29,30 +63,42 @@ body {
 }
 
 .experience-container::after {
-    opacity: 0.4;
-    content: '';
-    width: 0;
-    height: 52%;
-    position: absolute;
-    background-color: #94a3b8;
-    border: 0.1px solid #94a3b8;
-    bottom: 22%;
-    left: 0px;
+  opacity: 0.4;
+  content: "";
+  width: 0;
+  height: 54%;
+  position: absolute;
+  background-color: #94a3b8;
+  border: 0.1px solid #94a3b8;
+  bottom: 21%;
+  left: 0px;
 }
 
 .experience-text::before {
-    content: "<h4>";
-    margin-bottom: 5px;
-    display: block;
-    margin-left: -30px;
-    font-size: 14px;
-    color: #94a3b8;
+  content: "<h4>";
+  display: block;
+  margin-left: -30px;
+  font-size: 14px;
+  color: #94a3b8;
 }
 
 .experience-text::after {
-    content: "</h4>";
-    display: block;
-    margin-left: -28px;
-    font-size: 14px;
-    color: #94a3b8;
+  content: "</h4>";
+  display: block;
+  margin-left: -28px;
+  font-size: 14px;
+  color: #94a3b8;
+}
+
+@media (max-width: 768px) {
+  .hero-title {
+    font-size: 46px;
   }
+  .hero-subtitle {
+    font-size: 20px;
+    line-height: 1.3em;
+    letter-spacing: 1.6px;
+  }
+}
+
+
