--- a/src/App.css
+++ b/src/App.css
@@ -17,31 +17,11 @@ body {
   @apply absolute left-0 right-0 top-[4.8rem] bg-black backdrop-blur-sm transition-all duration-300 ease-in-out overflow-hidden z-20 mx-auto sm:hidden block;
 }
 
-.main-hero-area {
-  background-color: #130f40;
-  background-image: -webkit-linear-gradient(135deg, #130f40 0%, #000000 74%);
-  background-image: linear-gradient(315deg, #130f40 0%, #000000 74%);
+
+h1 {
+  font-family: "Poppins", sans-serif;
 }
 
-.hero-title {
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: 2.2px;
-  text-shadow: 1px 3px 11px rgba(0, 0, 0, 0.3);
-  font-size: 10vw;
-  font-family: sans-serif;
-  font-family: "Poppins", sans-serif;
-  color: #ffffff;
-  line-height: 1.2;
-}
-
-.hero-subtitle {
-  font-size: 22px;
-  text-transform: uppercase;
-  letter-spacing: 2.2px;
-  font-family: "Poppins", sans-serif;
-  color: rgb(161 161 170);
-}
 
 .backend-dev {
   text-decoration: underline;
@@ -96,17 +76,3 @@ body {
   font-size: 14px;
   color: #94a3b8;
 }
-
-@media (max-width: 768px) {
-  .hero-title {
-    font-size: 46px;
-  }
-  .hero-subtitle {
-    margin-top: 1rem;
-    font-size: 18px;
-    line-height: 1.3em;
-    letter-spacing: 1.6px;
-  }
-}
-
-
