--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,39 @@ h1 {
     @apply absolute left-0 right-0 top-[4.8rem] bg-black backdrop-blur-sm transition-all duration-300 ease-in-out overflow-hidden z-20 mx-auto sm:hidden block;
   }
 
+  .bento-tilt_1 {
+    @apply relative col-span-2 overflow-hidden rounded-md transition-transform duration-300 ease-out;
+  }
+
+  
+
+
+  
+  /* contact section */
+  .contact-container {
+    @apply max-w-xl relative z-10 sm:px-10 px-5 mt-12;
+  }
+
+  .field-label {
+    @apply text-lg text-white-600;
+  }
+
+  .field-input {
+    @apply w-full bg-black-300 px-5 py-2 min-h-14 rounded-lg placeholder:text-white-500 text-lg text-white-800 shadow-black-200 shadow-2xl focus:outline-none;
+  }
+
+  .field-btn {
+    @apply bg-black-500 px-5 py-2 min-h-12 rounded-lg shadow-black-200 shadow-2xl flex justify-center items-center text-lg text-white gap-3;
+  }
+
+  .field-btn_arrow {
+    @apply w-2.5 h-2.5 object-contain invert brightness-0;
+  }
+
+
+  
+
+
   .arrow-gradient {
     background-image: linear-gradient(
       to right,
